# AutoOrgan

./: README.html  README.md  README_CN.md  dataset.py  labels.json  main.py  postprocess_gpu.py  test.ipynb
AutoOrgan/: api_config.py  backend_data.py  config.py  infer.py  json2py.py  main.py  postprocess.py  postprocess_gpu.py  preprocess.py  pth2onnx.py  run_with_api.py
slicer-plug/AutoOrganSlicer/: CMakeLists.txt
slicer-plug/AutoOrganSlicer/AutoOrganSlicer/: AutoOrganSlicer.py  CMakeLists.txt  InferCode.py
slicer-plug/AutoOrganSlicer/AutoOrganSlicer/Resources/UI/: AutoOrganSlicer.ui  AutoOrganSlicer_en.ui
